# earshot

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
benches/: downsample.rs  vad.rs
src/: energy.rs  filterbank.rs  gmm.rs  lib.rs  resample.rs  sp.rs  util.rs
tests/data/: audio_tiny16.raw  audio_tiny32.raw  audio_tiny48.raw  audio_tiny8.raw
